--- a/SunRain/ManagementSystem/ServiceConfiguration/ServiceConfiguration.xaml
+++ b/SunRain/ManagementSystem/ServiceConfiguration/ServiceConfiguration.xaml
@@ -27,6 +27,13 @@
     <DockPanel>
         <Menu DockPanel.Dock="Top" Height="23">
             <MenuItem Header="文件">
+                <MenuItem Header="删除服务器消息日志" Click="LogDelete_MenuItem_Click"
+                          IsEnabled="{Binding Path=Connected,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+                    <MenuItem.Icon>
+                        <Image Source="resources/deletelog.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
+                    </MenuItem.Icon>
+                </MenuItem>
+                <Separator/>
                 <MenuItem Header="清除日志" Click="ClearLog_MenuItem_Click">
                     <MenuItem.Icon>
                         <Image Margin="-3" Source="resources/clearlog.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
@@ -65,16 +72,16 @@
                         <Image Source="resources/user_add.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Header="断开用户连接" Click="UserDisconnect_MenuItem_Click"
-                          IsEnabled="{Binding Path=Connected,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
-                    <MenuItem.Icon>
-                        <Image Source="resources/useroffline.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
-                    </MenuItem.Icon>
-                </MenuItem>
                 <MenuItem Header="编辑用户密码" Click="UserEdit_MenuItem_Click"
                           IsEnabled="{Binding Path=Connected,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
                     <MenuItem.Icon>
                         <Image Source="resources/useredit.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="断开用户连接" Click="UserDisconnect_MenuItem_Click"
+                          IsEnabled="{Binding Path=Connected,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+                    <MenuItem.Icon>
+                        <Image Source="resources/useroffline.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
                     </MenuItem.Icon>
                 </MenuItem>
                 <MenuItem Header="删除用户" Click="UserRemove_MenuItem_Click"
@@ -149,18 +156,18 @@
                     <Image Margin="-3" Source="resources/useradd.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
                 </Button.Content>
             </Button>
-            <Button Click="UserDisconnect_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
-                    IsEnabled="{Binding Path=Connected,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
-                    ToolTip="断开用户连接">
-                <Button.Content>
-                    <Image Margin="-3" Source="resources/useroffline.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
-                </Button.Content>
-            </Button>
             <Button Click="UserEdit_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
                     IsEnabled="{Binding Path=Connected,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                     ToolTip="编辑用户密码">
                 <Button.Content>
                     <Image Margin="-3" Source="resources/useredit.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
+                </Button.Content>
+            </Button>
+            <Button Click="UserDisconnect_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
+                    IsEnabled="{Binding Path=Connected,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
+                    ToolTip="断开用户连接">
+                <Button.Content>
+                    <Image Margin="-3" Source="resources/useroffline.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
                 </Button.Content>
             </Button>
             <Button Click="UserRemove_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
@@ -211,6 +218,14 @@
                     ToolTip="删除DTU">
                 <Button.Content>
                     <Image Margin="-3" Source="resources/dturemove.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
+                </Button.Content>
+            </Button>
+            <Separator/>
+            <Button Click="LogDelete_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
+                    IsEnabled="{Binding Path=Connected,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
+                    ToolTip="删除服务器消息日志">
+                <Button.Content>
+                    <Image Margin="-3" Source="resources/deletelog.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
                 </Button.Content>
             </Button>
             <Separator/>
