--- a/SunRain/ManagementSystem/ServiceConfiguration/ViewUserMsgLog.xaml
+++ b/SunRain/ManagementSystem/ServiceConfiguration/ViewUserMsgLog.xaml
@@ -1,9 +1,10 @@
 ﻿<Window x:Class="ServiceConfiguration.ViewUserMsgLog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="查看用户与DTU交互信息" Height="400" Width="600">
+        Title="查看用户与DTU交互信息" Height="400" Width="600" Loaded="Window_Loaded">
     <DockPanel>
         <StatusBar DockPanel.Dock="Bottom" Height="30">
+            <ProgressBar Name="pbDownloadFile" Width="150" Height="20"/>
             <Label Content="{Binding Path=ReadyString,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
         </StatusBar>
         <Grid>
