--- a/SunRain/ManagementSystem/ServiceConfiguration/ViewUserMsgLog.xaml
+++ b/SunRain/ManagementSystem/ServiceConfiguration/ViewUserMsgLog.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="ServiceConfiguration.ViewUserMsgLog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="查看用户与DTU交互信息" Height="400" Width="600" Loaded="Window_Loaded">
+        Title="查看用户与DTU交互信息" Height="400" Width="600" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
     <DockPanel>
         <Menu DockPanel.Dock="Top" Height="23">
             <MenuItem Header="文件">
@@ -39,11 +39,12 @@
         </StatusBar>
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200"/>
+                <ColumnDefinition Width="180"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <TreeView Name="tvUserDate" Grid.Column="0"
                       SelectedItemChanged="TVUserDate_SelectedItemChanged"/>
+            <GridSplitter Grid.Column="0" Width="3" HorizontalAlignment="Right" VerticalAlignment="Stretch"/>
             <DataGrid AutoGenerateColumns="False" Name="dgMessage" ItemsSource="{Binding}"
                   CanUserAddRows="False" CanUserDeleteRows="True" Grid.Column="1"
                   HorizontalGridLinesBrush="LightGray" VerticalGridLinesBrush="LightGray" 
@@ -60,11 +61,11 @@
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
-                    <DataGridTextColumn Header="时间" Width="SizeToCells" MinWidth="50"
-                                        Binding="{Binding Path=TimeStamp,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
-                                        IsReadOnly="True"/>
                     <DataGridTextColumn Header="消息内容" Width="SizeToCells" MinWidth="100"
                                         Binding="{Binding Path=Message,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
+                                        IsReadOnly="True"/>
+                    <DataGridTextColumn Header="时间" Width="SizeToCells" MinWidth="50"
+                                        Binding="{Binding Path=TimeStamp,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
                                         IsReadOnly="True"/>
                 </DataGrid.Columns>
             </DataGrid>
